appId: com.bmwgroup.idnext.launcher
jsEngine: graaljs
onFlowStart:
  - runFlow: ../../subflows/common/start.yaml
onFlowComplete:
  - runFlow: ../../subflows/common/stop.yaml
---
- evalScript: "${output.testId = 'ABPI-671641'}"
- runFlow: ../../subflows/common/radio_ready_and_verify.yaml
- runFlow: ../../../subflows/open_source_selector.yaml
- tapOn:
    text: USB
    optional: true
- tapOn:
    text: Bluetooth
    optional: true
- tapOn:
    text: Spotify
    optional: true
- waitForAnimationToEnd
- runFlow: ../../../subflows/open_source_selector.yaml
- tapOn:
    text: Radio
    optional: true
- waitForAnimationToEnd
- runFlow: ../../../subflows/verify_radio_backend.yaml
- takeScreenshot: "ABPI_671641_owner_manual_placeholder"
